ACS-11289 Review fixes [skip tests]