@@ -37,6 +37,7 @@ import static org.mockito.Mockito.when;
 
 import java.io.Serializable;
 import java.lang.reflect.Method;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -66,7 +67,8 @@ public class PropertyExtenderInterceptorTest
     private static final QName ASSOC_QNAME = QName.createQName(NamespaceService.CONTENT_MODEL_1_0_URI, "child");
     private static final QName NODE_TYPE = ContentModel.TYPE_CONTENT;
     private static final String METHOD_ADD_PROPERTIES = "addProperties";
-    private static final Map<QName, Serializable> PROPERTY_CHANGES = Map.of(PROP_NAME, "test");
+    private static final Map<QName, Serializable> PROPERTY_CHANGES_WITH_VALUE = Map.of(PROP_NAME, "test");
+    private static final Map<QName, Serializable> PROPERTY_CHANGES_WITH_NULL = Collections.singletonMap(PROP_NAME, null);
 
     private NodeService nodeService;
     private PropertyExtendersHolder extendersHolder;
@@ -89,21 +91,21 @@ public class PropertyExtenderInterceptorTest
     public void testAddProperties_noExtenders_shouldPassOriginalProperties() throws Throwable
     {
         // given
-        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, new Object[]{NODE_REF, PROPERTY_CHANGES});
+        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, NODE_REF, PROPERTY_CHANGES_WITH_VALUE);
 
         // when
         sut.invoke(invocation);
 
         // then
-        verify(nodeService).addProperties(NODE_REF, PROPERTY_CHANGES);
+        verify(nodeService).addProperties(NODE_REF, PROPERTY_CHANGES_WITH_VALUE);
     }
 
     @Test
-    public void testAddProperties_withExtender_shouldMergeAdditionalProperties() throws Throwable
+    public void testAddProperties_withExtenderAndNewValue_shouldMergeAdditionalProperties() throws Throwable
     {
         // given
         extendersHolder.registerExtender(extenderReturning(Map.of(PROP_TITLE, "calculated-title")));
-        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, new Object[]{NODE_REF, PROPERTY_CHANGES});
+        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, NODE_REF, PROPERTY_CHANGES_WITH_VALUE);
 
         // when
         sut.invoke(invocation);
@@ -116,17 +118,34 @@ public class PropertyExtenderInterceptorTest
     }
 
     @Test
-    public void testAddProperties_extenderReturnsNoOp_shouldPassOriginalProperties() throws Throwable
+    public void testAddProperties_withExtenderAndNullValue_shouldMergeAdditionalProperties() throws Throwable
     {
         // given
-        extendersHolder.registerExtender(extenderReturning(Map.of()));
-        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, new Object[]{NODE_REF, PROPERTY_CHANGES});
+        extendersHolder.registerExtender(extenderReturning(Collections.singletonMap(PROP_TITLE, null)));
+        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, NODE_REF, PROPERTY_CHANGES_WITH_NULL);
 
         // when
         sut.invoke(invocation);
 
         // then
-        verify(nodeService).addProperties(NODE_REF, PROPERTY_CHANGES);
+        verify(nodeService).addProperties(eq(NODE_REF), captor.capture());
+        assertThat(captor.getValue())
+                .containsEntry(PROP_NAME, null)
+                .containsEntry(PROP_TITLE, null);
+    }
+
+    @Test
+    public void testAddProperties_extenderReturnsNoOp_shouldPassOriginalProperties() throws Throwable
+    {
+        // given
+        extendersHolder.registerExtender(extenderReturning(Map.of()));
+        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, NODE_REF, PROPERTY_CHANGES_WITH_VALUE);
+
+        // when
+        sut.invoke(invocation);
+
+        // then
+        verify(nodeService).addProperties(NODE_REF, PROPERTY_CHANGES_WITH_VALUE);
     }
 
     // --- setProperties ---
@@ -135,21 +154,21 @@ public class PropertyExtenderInterceptorTest
     public void testSetProperties_noExtenders_shouldPassOriginalProperties() throws Throwable
     {
         // given
-        var invocation = mockInvocation("setProperties", new Object[]{NODE_REF, PROPERTY_CHANGES});
+        var invocation = mockInvocation("setProperties", NODE_REF, PROPERTY_CHANGES_WITH_VALUE);
 
         // when
         sut.invoke(invocation);
 
         // then
-        verify(nodeService).setProperties(NODE_REF, PROPERTY_CHANGES);
+        verify(nodeService).setProperties(NODE_REF, PROPERTY_CHANGES_WITH_VALUE);
     }
 
     @Test
-    public void testSetProperties_withExtender_shouldMergeAdditionalProperties() throws Throwable
+    public void testSetProperties_withExtenderAndNewValue_shouldMergeAdditionalProperties() throws Throwable
     {
         // given
         extendersHolder.registerExtender(extenderReturning(Map.of(PROP_TITLE, "calculated-title")));
-        var invocation = mockInvocation("setProperties", new Object[]{NODE_REF, PROPERTY_CHANGES});
+        var invocation = mockInvocation("setProperties", NODE_REF, PROPERTY_CHANGES_WITH_VALUE);
 
         // when
         sut.invoke(invocation);
@@ -161,6 +180,23 @@ public class PropertyExtenderInterceptorTest
                 .containsEntry(PROP_TITLE, "calculated-title");
     }
 
+    @Test
+    public void testSetProperties_withExtenderAndNullValue_shouldMergeAdditionalProperties() throws Throwable
+    {
+        // given
+        extendersHolder.registerExtender(extenderReturning(Collections.singletonMap(PROP_TITLE, null)));
+        var invocation = mockInvocation("setProperties", NODE_REF, PROPERTY_CHANGES_WITH_NULL);
+
+        // when
+        sut.invoke(invocation);
+
+        // then
+        verify(nodeService).setProperties(eq(NODE_REF), captor.capture());
+        assertThat(captor.getValue())
+                .containsEntry(PROP_NAME, null)
+                .containsEntry(PROP_TITLE, null);
+    }
+
     // --- createNode ---
 
     @Test
@@ -168,16 +204,16 @@ public class PropertyExtenderInterceptorTest
     {
         // given
         var expectedResult = mock(ChildAssociationRef.class);
-        when(nodeService.createNode(PARENT_NODE_REF, ASSOC_TYPE, ASSOC_QNAME, NODE_TYPE, PROPERTY_CHANGES))
+        when(nodeService.createNode(PARENT_NODE_REF, ASSOC_TYPE, ASSOC_QNAME, NODE_TYPE, PROPERTY_CHANGES_WITH_VALUE))
                 .thenReturn(expectedResult);
-        var invocation = mockInvocation("createNode", new Object[]{PARENT_NODE_REF, ASSOC_TYPE, ASSOC_QNAME, NODE_TYPE, PROPERTY_CHANGES});
+        var invocation = mockInvocation("createNode", PARENT_NODE_REF, ASSOC_TYPE, ASSOC_QNAME, NODE_TYPE, PROPERTY_CHANGES_WITH_VALUE);
 
         // when
         var result = sut.invoke(invocation);
 
         // then
         assertThat(result).isSameAs(expectedResult);
-        verify(nodeService).createNode(PARENT_NODE_REF, ASSOC_TYPE, ASSOC_QNAME, NODE_TYPE, PROPERTY_CHANGES);
+        verify(nodeService).createNode(PARENT_NODE_REF, ASSOC_TYPE, ASSOC_QNAME, NODE_TYPE, PROPERTY_CHANGES_WITH_VALUE);
     }
 
     @Test
@@ -185,7 +221,7 @@ public class PropertyExtenderInterceptorTest
     {
         // given
         extendersHolder.registerExtender(extenderReturning(Map.of(PROP_TITLE, "calculated-title")));
-        var invocation = mockInvocation("createNode", new Object[]{PARENT_NODE_REF, ASSOC_TYPE, ASSOC_QNAME, NODE_TYPE, PROPERTY_CHANGES});
+        var invocation = mockInvocation("createNode", PARENT_NODE_REF, ASSOC_TYPE, ASSOC_QNAME, NODE_TYPE, PROPERTY_CHANGES_WITH_VALUE);
 
         // when
         sut.invoke(invocation);
@@ -203,7 +239,7 @@ public class PropertyExtenderInterceptorTest
     public void testSetProperty_noExtenders_shouldCallSetPropertyOnly() throws Throwable
     {
         // given
-        var invocation = mockInvocation("setProperty", new Object[]{NODE_REF, PROP_NAME, "test"});
+        var invocation = mockInvocation("setProperty", NODE_REF, PROP_NAME, "test");
 
         // when
         sut.invoke(invocation);
@@ -214,11 +250,11 @@ public class PropertyExtenderInterceptorTest
     }
 
     @Test
-    public void testSetProperty_withExtender_shouldAddAdditionalPropertiesAndSetOriginal() throws Throwable
+    public void testSetProperty_withExtenderAndNewValue_shouldAddAdditionalPropertiesAndSetOriginal() throws Throwable
     {
         // given
         extendersHolder.registerExtender(extenderReturning(Map.of(PROP_TITLE, "calculated-title")));
-        var invocation = mockInvocation("setProperty", new Object[]{NODE_REF, PROP_NAME, "test"});
+        var invocation = mockInvocation("setProperty", NODE_REF, PROP_NAME, "test");
 
         // when
         sut.invoke(invocation);
@@ -230,11 +266,27 @@ public class PropertyExtenderInterceptorTest
     }
 
     @Test
+    public void testSetProperty_withExtenderAndNullValue_shouldAddAdditionalPropertiesAndSetOriginal() throws Throwable
+    {
+        // given
+        extendersHolder.registerExtender(extenderReturning(Collections.singletonMap(PROP_TITLE, null)));
+        var invocation = mockInvocation("setProperty", NODE_REF, PROP_NAME, null);
+
+        // when
+        sut.invoke(invocation);
+
+        // then
+        verify(nodeService).addProperties(eq(NODE_REF), captor.capture());
+        assertThat(captor.getValue()).containsEntry(PROP_TITLE, null);
+        verify(nodeService).setProperty(NODE_REF, PROP_NAME, null);
+    }
+
+    @Test
     public void testSetProperty_extenderReturnsNoOp_shouldCallSetPropertyOnly() throws Throwable
     {
         // given
         extendersHolder.registerExtender(extenderReturning(Map.of()));
-        var invocation = mockInvocation("setProperty", new Object[]{NODE_REF, PROP_NAME, "test"});
+        var invocation = mockInvocation("setProperty", NODE_REF, PROP_NAME, "test");
 
         // when
         sut.invoke(invocation);
@@ -250,7 +302,7 @@ public class PropertyExtenderInterceptorTest
     public void testRemoveProperty_noExtenders_shouldCallRemovePropertyOnly() throws Throwable
     {
         // given
-        var invocation = mockInvocation("removeProperty", new Object[]{NODE_REF, PROP_NAME});
+        var invocation = mockInvocation("removeProperty", NODE_REF, PROP_NAME);
 
         // when
         sut.invoke(invocation);
@@ -268,7 +320,7 @@ public class PropertyExtenderInterceptorTest
         additionalProps.put(PROP_TITLE, null);
         additionalProps.put(PROP_DESCRIPTION, null);
         extendersHolder.registerExtender(extenderReturning(additionalProps));
-        var invocation = mockInvocation("removeProperty", new Object[]{NODE_REF, PROP_NAME});
+        var invocation = mockInvocation("removeProperty", NODE_REF, PROP_NAME);
 
         // when
         sut.invoke(invocation);
@@ -289,7 +341,7 @@ public class PropertyExtenderInterceptorTest
         // given
         extendersHolder.registerExtender(extenderReturning(Map.of(PROP_TITLE, "title-from-ext1")));
         extendersHolder.registerExtender(extenderReturning(Map.of(PROP_DESCRIPTION, "desc-from-ext2")));
-        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, new Object[]{NODE_REF, PROPERTY_CHANGES});
+        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, NODE_REF, PROPERTY_CHANGES_WITH_VALUE);
 
         // when
         sut.invoke(invocation);
@@ -310,7 +362,7 @@ public class PropertyExtenderInterceptorTest
         // given
         extendersHolder.registerExtender(extenderReturning(Map.of(PROP_NAME, "overridden-name")));
         Map<QName, Serializable> properties = Map.of(PROP_NAME, "original-name");
-        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, new Object[]{NODE_REF, properties});
+        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, NODE_REF, properties);
 
         // when
         sut.invoke(invocation);
@@ -327,18 +379,18 @@ public class PropertyExtenderInterceptorTest
     {
         // given
         var unmatchedInvocations = List.of(
-                mockInvocation("getProperties", new Object[]{NODE_REF}),
-                mockInvocation("getProperty", new Object[]{NODE_REF, PROP_NAME}),
-                mockInvocation("exists", new Object[]{NODE_REF}),
-                mockInvocation("getType", new Object[]{NODE_REF}),
-                mockInvocation("deleteNode", new Object[]{NODE_REF}),
-                mockInvocation("getAspects", new Object[]{NODE_REF}),
-                mockInvocation("hasAspect", new Object[]{NODE_REF, PROP_NAME}),
-                mockInvocation("getPrimaryParent", new Object[]{NODE_REF}),
-                mockInvocation("getPath", new Object[]{NODE_REF}),
-                mockInvocation("getChildAssocs", new Object[]{NODE_REF}),
-                mockInvocation("getParentAssocs", new Object[]{NODE_REF}),
-                mockInvocation("createNode", new Object[]{PARENT_NODE_REF, ASSOC_TYPE, ASSOC_QNAME, NODE_TYPE}));
+                mockInvocation("getProperties", NODE_REF),
+                mockInvocation("getProperty", NODE_REF, PROP_NAME),
+                mockInvocation("exists", NODE_REF),
+                mockInvocation("getType", NODE_REF),
+                mockInvocation("deleteNode", NODE_REF),
+                mockInvocation("getAspects", NODE_REF),
+                mockInvocation("hasAspect", NODE_REF, PROP_NAME),
+                mockInvocation("getPrimaryParent", NODE_REF),
+                mockInvocation("getPath", NODE_REF),
+                mockInvocation("getChildAssocs", NODE_REF),
+                mockInvocation("getParentAssocs", NODE_REF),
+                mockInvocation("createNode", PARENT_NODE_REF, ASSOC_TYPE, ASSOC_QNAME, NODE_TYPE));
 
         // when, then
         for (var invocation : unmatchedInvocations)
@@ -358,7 +410,7 @@ public class PropertyExtenderInterceptorTest
         var extender = mock(PropertyExtender.class);
         when(extender.calculate(any())).thenThrow(new AlfrescoRuntimeException("expected error"));
         extendersHolder.registerExtender(extender);
-        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, new Object[]{NODE_REF, PROPERTY_CHANGES});
+        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, NODE_REF, PROPERTY_CHANGES_WITH_VALUE);
 
         // when, then
         assertThatThrownBy(() -> sut.invoke(invocation))
@@ -373,7 +425,7 @@ public class PropertyExtenderInterceptorTest
         var extender = mock(PropertyExtender.class);
         when(extender.calculate(any())).thenThrow(new IllegalStateException("unexpected error"));
         extendersHolder.registerExtender(extender);
-        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, new Object[]{NODE_REF, PROPERTY_CHANGES});
+        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, NODE_REF, PROPERTY_CHANGES_WITH_VALUE);
 
         // when, then
         assertThatThrownBy(() -> sut.invoke(invocation))
@@ -390,7 +442,7 @@ public class PropertyExtenderInterceptorTest
         // given
         extendersHolder.registerExtender(extenderReturning(Map.of(PROP_TITLE, "should-not-appear")));
         Map<QName, Serializable> properties = Map.of();
-        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, new Object[]{NODE_REF, properties});
+        var invocation = mockInvocation(METHOD_ADD_PROPERTIES, NODE_REF, properties);
 
         // when
         sut.invoke(invocation);
@@ -401,7 +453,7 @@ public class PropertyExtenderInterceptorTest
 
     // --- helpers ---
 
-    private MethodInvocation mockInvocation(String methodName, Object[] args) throws NoSuchMethodException
+    private MethodInvocation mockInvocation(String methodName, Object... args) throws NoSuchMethodException
     {
         var invocation = mock(MethodInvocation.class);
         Method method = findMethod(methodName, args.length);
